<?xml version="1.0"?>
<package>
  <name>dead_reckoning</name>
  <version>0.0.0</version>
  <description>The dead_reckoning package</description>

  <maintainer email="alvin@somewhere.se">Alvin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>wheel_sensor</build_depend>
  <build_depend>phidgets</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>wheel_sensor</run_depend>
  <run_depend>phidgets</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

